--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "defi04/java/httpServer"]
 	path = defi04/java/httpServer
 	url = https://github.com/florentm35/httpServer
+[submodule "defi04/java/florent"]
+	path = defi04/java/florent
+	url = https://github.com/florentm35/httpServer
