--- a/defi04/javascript/mestery/package.json
+++ b/defi04/javascript/mestery/package.json
@@ -32,7 +32,7 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
-		"not-an-httpserver": "https://github.com/Mesteery/not-an-httpserver#main"
+		"not-an-httpserver": "https://github.com/Mesteery/not-an-httpserver.git#commit=07d8227a60ada46150de4411f0aa2e90551186e4"
 	},
 	"dependenciesMeta": {
 		"autocannon@7.0.5": {
