--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "defi04/java/florent"]
 	path = defi04/java/florent
 	url = https://github.com/florentm35/httpServer
+[submodule "defi04/crystal/Superkooka"]
+	path = defi04/crystal/Superkooka
+	url = https://git.superkooka.com/Superkooka/WebCrystal
