--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "defi04/java/florent"]
 	path = defi04/java/florent
 	url = https://github.com/florentm35/httpServer
+[submodule "defi05/cpp/tutosfaciles48"]
+	path = defi05/cpp/tutosfaciles48
+	url = https://github.com/tutosfaciles48/TotalisticNumber
