--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "defi05/java/florent"]
 	path = defi05/java/florent
 	url = https://github.com/florentm35/game-of-lide
+[submodule "defi05/python/avanini"]
+	path = defi05/python/avanini
+	url = https://gitlab.com/fblanchet/defi-nan
