add florent java defis 06

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "defi05/python/MTrezzy"]
 	path = defi05/python/MTrezzy
 	url = https://github.com/MTrezzy/Jeu-de-la-vie_virus
+[submodule "defi06/java/defi06/java/florent"]
+	path = defi06/java/defi06/java/florent
+	url = https://github.com/florentm35/client-irc.git
