--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "defi08/java/florent"]
 	path = defi08/java/florent
 	url = https://github.com/florentm35/puissance4.git
+[submodule "defi08/c/meithal"]
+	path = defi08/c/meithal
+	url = https://gitlab.com/Meithal/puissance4.git
